changes in education section

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                       <span>Software Developement</span></li>
                     <li class="d-flex">
                       <span>Education:</span>
-                      <span>Bachelor of Computer Applications Persuing</span>
+                      <!-- <span>Bachelor of Computer Applications Persuing</span> -->
                       <span>Diploma in Computer Science & Engineering</span></li>
                     <li class="d-flex">
                       <span>Language:</span>
