--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
       <script src="js/main.js"></script>
       <script>
         function gitClick() {
-          window.location.href = '';
+          window.location.href = 'https://github.com/DPandey2001';
         }
       </script>
 
