--- a/index.html
+++ b/index.html
@@ -354,7 +354,9 @@
         </div>
 
         <div class="row">
-          <h1 class="big-4">Experience</h1>
+          <!-- <h1 class="big-4">Experience</h1> -->
+          <h1 class="big big-2">Experience</h1>
+          <h2 class="mb-4">Experience </h2>
           <div class="underline"></div>
         </div>
         <br>
@@ -378,7 +380,9 @@
         <br>
 
         <div class="row">
-          <h1 class="big-4">Education</h1>
+          <!-- <h1 class="big-4">Education</h1> -->
+          <h1 class="big big-2">Education</h1>
+          <h2 class="mb-4">Education </h2>
           <div class="underline"></div>
         </div>
         <br>
