--- a/index.html
+++ b/index.html
@@ -120,17 +120,17 @@
         content: url("images/me.png");
       }
     }
+    .one-third.js-fullheight {
+    height: 300px; 
+    background-image: url(images/me.jpg);
+    background-size: contain;
+    background-position: center;
+    background-repeat: no-repeat;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 
-    /* project image zoom effect */
-
-    .zoom-effect {
-      overflow: hidden;
-      transition: transform 0.3s ease-out;
-    }
-
-    .zoom-effect:hover {
-      transform: scale(1.1);
-    }
   </style>
 
 </head>
@@ -179,7 +179,7 @@
         <div class="container">
           <div class="row d-md-flex no-gutters slider-text align-items-end justify-content-end"
             data-scrollax-parent="true">
-            <div class="one-third js-fullheight order-md-last img" style="background-image:url(images/me.png);">
+            <div class="one-third js-fullheight order-md-last img" style="background-image:url(images/me.jpg);">
               <div class="overlay"></div>
             </div>
             <div class="one-forth d-flex  align-items-center ftco-animate"
@@ -246,7 +246,7 @@
                 <div class="row">
                   <div class="col-sm-6 col-md-5">
                     <div class="about-img">
-                      <img src="images/about-me.png" class="img-fluid rounded b-shadow-a" alt="">
+                      <img src="images/about-me.jpg" class="img-fluid rounded b-shadow-a" alt="">
                     </div>
                   </div>
                   <!-- Details next to profile image -->
