--- a/index.html
+++ b/index.html
@@ -155,7 +155,11 @@
           <li class="nav-item">
             <a href="#about-section" class="nav-link">
               <span>About</span></a>
+          </li><li class="nav-item">
+            <a href="#project-section" class="nav-link">
+              <span>Project</span></a>
           </li>
+
           <li class="nav-item">
             <a href="#resume-section" class="nav-link">
               <span>Resume</span></a>
@@ -172,6 +176,7 @@
       </div>
     </div>
   </nav>
+  <!-- HOME -->
   <section id="home-section" class="hero">
     <div class="home-slider  owl-carousel">
       <div class="slider-item ">
@@ -234,7 +239,7 @@
       </div>
     </div>
   </section>
-
+<!-- ABOUT -->
   <section class="ftco-about img ftco-section ftco-no-pb" id="about-section">
     <div class="container">
       <div class="row">
@@ -379,7 +384,7 @@
       </div>
     </div>
   </section>
-
+<!-- PROJECTS -->
   <section class="ftco-section" id="project-section">
     <div class="container">
       <div class="row justify-content-center mb-5 pb-5">
@@ -392,26 +397,29 @@
       <div class="row d-flex">
         <div class="col-md-4 d-flex ftco-animate">
           <div class="blog-entry justify-content-end">
-            <!-- <a href="" class="block-20 zoom-effect" style="background-image: url('images/proj_1.jpg');"> -->
+            <a href="https://dpandey2001.github.io/Portfolio" class="block-20 zoom-effect" style="background-image: url('images/FRONTEND.png');">
             </a>
             <div class="text mt-3 float-right d-block">
-
-              <!-- <h3 class="heading"><a href="https://github.com/rishabhnmishra/SQL_Music_Store_Analysis/blob/main/Music_Store_Query.sql">Digital Music Store Data Analysis using SQL</a></h3> -->
+              <a href="https://dpandey2001.github.io/Portfolio" class="block-20 zoom-effect" style="background-image: url('images/FRONTEND.png');">
+                <!-- <h3 class="heading"><a href="https://github.com/rishabhnmishra/SQL_Music_Store_Analysis/blob/main/Music_Store_Query.sql">Digital Music Store Data Analysis using SQL</a></h3> -->
             </div>
           </div>
         </div>
         <div class="col-md-4 d-flex ftco-animate">
           <div class="blog-entry justify-content-end">
+            <!-- <a href="https://dpandey2001.github.io/Portfolio" class="block-20 zoom-effect" style="background-image: url('images/FRONTEND.png');"> -->
             <!-- <a href="https://github.com/rishabhnmishra/Python_Diwali_Sales_Analysis/blob/main/Diwali_Sales_Analysis.ipynb" class="block-20 zoom-effect" style="background-image: url('images/proj_2.jpg');"> -->
             </a>
             <div class="text mt-3 float-right d-block">
-
+              <!-- <a href="https://dpandey2001.github.io/Portfolio" class="block-20 zoom-effect" style="background-image: url('images/FRONTEND.png');"> -->
               <!-- <h3 class="heading"><a href="https://github.com/rishabhnmishra/Python_Diwali_Sales_Analysis/blob/main/Diwali_Sales_Analysis.ipynb">Data Analysis using Python Project for Beginners</a></h3> -->
             </div>
           </div>
         </div>
         <div class="col-md-4 d-flex ftco-animate">
           <div class="blog-entry">
+            <!-- <a href="https://dpandey2001.github.io/Portfolio" class="block-20 zoom-effect" style="background-image: url('images/FRONTEND.png');"> -->
+
             <!-- <a href="https://github.com/rishabhnmishra/Madhav_Store_Analysis_PowerBI/blob/main/Madhav%20Store%20dashboard.jpg" class="block-20 zoom-effect" style="background-image: url('images/proj_3.jpg');"> -->
             </a>
             <div class="text mt-3 float-right d-block">
@@ -447,7 +455,7 @@
       </div>
     </div>
   </section>
-
+<!-- RESUME -->
   <section class="ftco-section ftco-no-pb" id="resume-section">
     <div class="container">
       <div class="row justify-content-center pb-5">
@@ -530,6 +538,7 @@
       </div>
     </div>
   </section>
+<!-- GITHUB LINK -->
   <section class="ftco-section ftco-no-pt ftco-no-pb ftco-counter img" id="section-counter">
     <div class="hid" style="visibility:hidden">
       <div class="container">
@@ -571,7 +580,7 @@
       </div>
     </div>
   </section>
-
+<!-- CONTACT -->
   <section class="ftco-section contact-section ftco-no-pb" id="contact-section">
     <div class="container">
       <div class="row justify-content-center mb-5 pb-3">
@@ -718,7 +727,7 @@
         </div>
       </div>
   </section>
-
+<!-- FOOTER -->
   <footer class="ftco-footer ftco-section">
     <div class="container">
       <div class="row">
