--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@
       <div class="row d-flex">
         <div class="col-md-4 d-flex ftco-animate">
           <div class="blog-entry justify-content-end">
-            <a href="https://dpandey2001.github.io/Portfolio" class="block-20 zoom-effect" style="background-image: url('images/FRONTEND.png');">
+            <!-- <a href="https://dpandey2001.github.io/Portfolio" class="block-20 zoom-effect" style="background-image: url('images/FRONTEND.png');"> -->
             </a>
             <div class="text mt-3 float-right d-block">
               <a href="https://dpandey2001.github.io/Portfolio" class="block-20 zoom-effect" style="background-image: url('images/FRONTEND.png');">
