--- a/index.html
+++ b/index.html
@@ -397,10 +397,12 @@
       <div class="row d-flex">
         <div class="col-md-4 d-flex ftco-animate">
           <div class="blog-entry justify-content-end">
-            <!-- <a href="https://dpandey2001.github.io/Portfolio" class="block-20 zoom-effect" style="background-image: url('images/FRONTEND.png');"> -->
+            <!-- <a href="" class="block-20 zoom-effect" style="background-image: url('images/csd\ portal.png');"> -->
             </a>
             <div class="text mt-3 float-right d-block">
-              <a href="https://dpandey2001.github.io/Portfolio" class="block-20 zoom-effect" style="background-image: url('images/FRONTEND.png');">
+                          <a href="" class="block-20 zoom-effect" style="background-image: url('images/csd\ portal.png');">
+                <h3 class="heading"><a href=""></a>Build an Angular Project in which i used multiple functionality asked by the user and make reusing components and made graphs, made logic for downlading html to png and made qr too and made multiple forms in a single page and implemented get and post api too in the project. </h3>
+              <!-- <a href="https://dpandey2001.github.io/Portfolio" class="block-20 zoom-effect" style="background-image: url('images/FRONTEND.png');"> -->
                 <!-- <h3 class="heading"><a href="https://github.com/rishabhnmishra/SQL_Music_Store_Analysis/blob/main/Music_Store_Query.sql">Digital Music Store Data Analysis using SQL</a></h3> -->
             </div>
           </div>
@@ -434,9 +436,9 @@
       <div class="row d-flex justify-content-center">
         <div class="col-md-4 d-flex ftco-animate">
           <div class="blog-entry justify-content-end">
-            <a href="https://github.com/rishabhnmishra/sales_forecasting/tree/main" class="block-20 zoom-effect"
+            <!-- <a href="https://github.com/rishabhnmishra/sales_forecasting/tree/main" class="block-20 zoom-effect"
               style="background-image: url('images/proj_4.jpg');">
-            </a>
+            </a> -->
             <div class="text mt-3 float-right d-block">
 
            
@@ -531,8 +533,8 @@
       <div class="row justify-content-center mt-5">
         <div class="col-md-6 text-center ftco-animate">
           <p>
-            <!-- <a href="https://drive.google.com/" class="btn btn-primary py-4 px-5">Download CV</a> -->
-            <a href="" class="btn btn-primary py-4 px-5">Download CV</a>
+            <a href="https://drive.google.com/file/d/1_aO48D-G5pwM9tuRhmnkxwo4jzQZUY9F/view?usp=drive_link" class="btn btn-primary py-4 px-5">Download Resume</a>
+            <!-- <a href="" class="btn btn-primary py-4 px-5">Download Resume</a> -->
           </p>
         </div>
       </div>
@@ -630,8 +632,8 @@
             </div>
             <h3 class="mb-4">Download Resume</h3>
             <p>
-              <!-- <a href="https://drive.google.com/">resumelink</a> -->
-              <a href="">resumelink</a>
+            <a href="https://drive.google.com/file/d/1_aO48D-G5pwM9tuRhmnkxwo4jzQZUY9F/view?usp=drive_link" >resume link</a>
+            <a href="">resumelink</a>
             </p>
           </div>
         </div>
