--- a/index.html
+++ b/index.html
@@ -155,7 +155,8 @@
           <li class="nav-item">
             <a href="#about-section" class="nav-link">
               <span>About</span></a>
-          </li><li class="nav-item">
+          </li>
+          <li class="nav-item">
             <a href="#project-section" class="nav-link">
               <span>Project</span></a>
           </li>
