chnges in website

--- a/index.html
+++ b/index.html
@@ -392,7 +392,7 @@
         <div class="col-md-7 heading-section text-center ftco-animate">
           <h1 class="big big-2">Projects</h1>
           <h2 class="mb-4">Projects</h2>
-          <p>Below are the sample projects on Angular.</p>
+          <p>Below are the sample projects on Angular,Javascript</p>
         </div>
       </div>
       <div class="row d-flex">
@@ -402,16 +402,36 @@
             <!-- </a> -->
             <div class="text mt-3 float-right d-block">
               <a href="" class="block-20 zoom-effect" style="background-image: url('images/csd\ portal.png');">
-                <h3 class="heading"><a href=""></a>Build an Angular Project in which i used multiple functionality asked
-                  by the user and make reusing components and made graphs, made logic for downlading html to png and
-                  made qr too and made multiple forms in a single page and implemented get and post api too in the
-                  project. </h3>
+                <h3 class="heading"><a href=""></a>Development of a tool that may facilitate the Post-Sales Support team
+                  to extend support to the
+                  customer. Designed and developed a dynamic dashboard for data visualization in various formats
+                  like charts and tables. Made functionality to convert table data into Excel and download that excel.
+                </h3>
                 <!-- <a href="https://dpandey2001.github.io/Portfolio" class="block-20 zoom-effect" style="background-image: url('images/FRONTEND.png');"> -->
                 <!-- <h3 class="heading"><a href="https://github.com/rishabhnmishra/SQL_Music_Store_Analysis/blob/main/Music_Store_Query.sql">Digital Music Store Data Analysis using SQL</a></h3> -->
             </div>
+            <!-- <div class="text mt-3 float-right d-block">
+              <a href="" class="block-20 zoom-effect" style="background-image: url('images/csd\ portal.png');">
+                <h3 class="heading"><a href=""></a>Development of Tools for Post-Development Support and Sales Forecasting<br>
+                  Tool 1: Post-Development Support Dashboard<br>
+                  Designed and developed a dynamic dashboard for data visualization in various formats, including tables.
+                  Implemented functionality to convert table data into Excel format for easy download.<br>
+                  Tool 2: Sales Forecasting Dashboard<br>
+                  Designed and developed a dynamic dashboard for data visualization in various formats, including tables.
+                  Implemented functionality to convert table data into Excel format for easy download.<br>
+                  Tool 3: QR Code Generation Application<br>
+                  Developed an application to generate QR codes for every test performed.
+                  Enabled users to scan the QR code to access detailed test results on their devices.
+
+                </h3>
+                <!-- <a href="https://dpandey2001.github.io/Portfolio" class="block-20 zoom-effect" style="background-image: url('images/FRONTEND.png');"> -->
+                <!-- <h3 class="heading"><a href="https://github.com/rishabhnmishra/SQL_Music_Store_Analysis/blob/main/Music_Store_Query.sql">Digital Music Store Data Analysis using SQL</a></h3> --
+            </div> -->
             <div class="text mt-3 float-right d-block">
-              <a href="https://dpandey2001.github.io/AGE-CALCULATOR/" class="block-20 zoom-effect" style="background-image: url('images/AgeC.png');">
-                <h3 class="heading"><a href="https://dpandey2001.github.io/AGE-CALCULATOR/"></a>Build an age calculator  Project in which i used multiple functionality in the
+              <a href="https://dpandey2001.github.io/AGE-CALCULATOR/" class="block-20 zoom-effect"
+                style="background-image: url('images/AgeC.png');">
+                <h3 class="heading"><a href="https://dpandey2001.github.io/AGE-CALCULATOR/"></a>Build an age calculator
+                  Project in which i used multiple functionality in the
                   project to display the age of the person by selecting his date of birth.</h3>
             </div>
           </div>
@@ -424,13 +444,16 @@
             <div class="text mt-3 float-right d-block">
               <a href="https://dpandey2001.github.io/FRUIT-GAME/" class="block-20 zoom-effect"
                 style="background-image: url('images/game.jpg');">
-                <h3 class="heading"><a href="https://dpandey2001.github.io/FRUIT-GAME/"></a>Build an Game Project in which i used multiple functionality in the
-                  project and made a fruit slicing game in which when we move the cursor at the fruit it slice and the score increases as we do so.  </h3>
+                <h3 class="heading"><a href="https://dpandey2001.github.io/FRUIT-GAME/"></a>Build an Game Project in
+                  which i used multiple functionality in the
+                  project and made a fruit slicing game in which when we move the cursor at the fruit it slice and the
+                  score increases as we do so. </h3>
             </div>
             <div class="text mt-3 float-right d-block">
               <a href="https://dpandey2001.github.io/SHOPPING-APP/" class="block-20 zoom-effect"
                 style="background-image: url('images/gallary.png');">
-                <h3 class="heading"><a href="https://dpandey2001.github.io/SHOPPING-APP/"></a>Build an Shopping app Project in which i used multiple functionality in the
+                <h3 class="heading"><a href="https://dpandey2001.github.io/SHOPPING-APP/"></a>Build an Shopping app
+                  Project in which i used multiple functionality in the
                   project to make it as a shopping website in which we can add products to cart and buy them.</h3>
             </div>
           </div>
@@ -444,13 +467,16 @@
             <div class="text mt-3 float-right d-block">
               <a href="https://dpandey2001.github.io/BLOG/" class="block-20 zoom-effect"
                 style="background-image: url('images/blog-img.png');">
-                <h3 class="heading"><a href="https://dpandey2001.github.io/BLOG/"></a>Build an Blog  Project in which i used to post my blogs of my work my languages which i have learnt  and more about them .   </h3>
+                <h3 class="heading"><a href="https://dpandey2001.github.io/BLOG/"></a>Build an Blog Project in which i
+                  used to post my blogs of my work my languages which i have learnt and more about them . </h3>
             </div>
             <div class="text mt-3 float-right d-block">
               <a href="https://dpandey2001.github.io/PERSONAL-PORTFOLIO/" class="block-20 zoom-effect"
                 style="background-image: url('images/hero-bg.webp');">
-                <h3 class="heading"><a href="https://dpandey2001.github.io/PERSONAL-PORTFOLIO/"></a>Build another Portfolio website Project in which i used made it very much convienent and use many more things in that portfolio in the
-                  project to make it as a simple and professional website.</h3> 
+                <h3 class="heading"><a href="https://dpandey2001.github.io/PERSONAL-PORTFOLIO/"></a>Build another
+                  Portfolio website Project in which i used made it very much convienent and use many more things in
+                  that portfolio in the
+                  project to make it as a simple and professional website.</h3>
             </div>
           </div>
         </div>
@@ -488,7 +514,16 @@
         <div class="col-md-10 heading-section text-center ftco-animate">
           <h1 class="big big-2">Resume</h1>
           <h2 class="mb-4">Resume</h2>
-          <p>Experienced UI Developer at HFCL Limited, proficient in Angular and skilled in Javascript. Specialized in
+          <p>
+            Developed a modular, single-page web application leveraging Angular and responsive design principles.<br>
+            ● Integrated third-party APIs for seamless data exchange and real-time updates.<br>
+            ● Designed and developed a dynamic dashboard for data visualization in various formats like charts and
+            tables.<br>
+            ● Made an innovative application for generating a QR code for each data as per industry guidelines.<br>
+            ● Made bulk upload functionality to upload bulk files and use their data as per need.<br>
+            ● Made functionality to convert table data into Excel and download that excel.<br>
+            ● Made a Chabot using Gemini API in angular 13.<br>
+            Experienced UI Developer at HFCL Limited, proficient in Angular and skilled in Javascript. Specialized in
             crafting visually appealing webpages using HTML, CSS, Bootstrap, and Material UI. Eager to apply expertise
             to drive innovative web development projects forward.</p>
         </div>
@@ -509,9 +544,16 @@
             <p class="mt-4">HFCL Limited, a top Indian company, specializes in Optical Fiber work , e-Learning, media,
               and developement. We craft custom software solutions to enhance functionality and productivity across
               industries.
-            <ul>
+              ● Integrated third-party APIs for seamless data exchange and real-time updates.<br>
+              ● Designed and developed a dynamic dashboard for data visualization in various formats like charts and
+              tables.<br>
+              ● Made an innovative application for generating a QR code for each data as per industry guidelines.<br>
+              ● Made bulk upload functionality to upload bulk files and use their data as per need.<br>
+              ● Made functionality to convert table data into Excel and download that excel.<br>
+              ● Made a Chabot using Gemini API in angular 13.<br>
+              <!-- <ul>
               <li>Working in developement of applications based on Angular.</li>
-            </ul>
+            </ul> -->
             </p>
           </div>
         </div>
